<!--
  ~ Copyright 2014 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
  <item android:id="@+id/action_tutorial" android:title="@string/tutorial"
      android:orderInCategory="20" android:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/about"
        android:orderInCategory="10" android:showAsAction="never" />
  <item android:id="@+id/action_troubleshooting" android:title="@string/troubleshooting"
      android:orderInCategory="30" android:showAsAction="never" />
  <item android:id="@+id/action_switchAccounts" android:title="@string/switchAccounts"
      android:orderInCategory="40" android:showAsAction="never" />
</menu>
