<!--
  ~ Copyright 2014 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:onClick="onSendMessageButtonClick"
    android:background="#ff000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bigButtonDesc"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:onClick="onSendMessageButtonClick"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/androidWearHint"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:onClick="onSendMessageButtonClick"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:onClick="onSendMessageButtonClick"
        android:id="@+id/versionText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/useVolume"
        android:id="@+id/textView3"
        android:textColor="#ffffffff"
        android:onClick="onSendMessageButtonClick"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or"
        android:id="@+id/textView4"
        android:onClick="onSendMessageButtonClick"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or"
        android:id="@+id/textView5"
        android:onClick="onSendMessageButtonClick"
        android:textColor="#ffffffff"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoFeedback"
        android:id="@+id/textView9"
        android:textColor="#ffffffff"
        android:onClick="onSendMessageButtonClick"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/versionText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/youCanSwitchOffScreen"
        android:id="@+id/textView6"
        android:textColor="#ffffffff"
        android:onClick="onSendMessageButtonClick"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/toPassTheSlidesYouMay"
        android:id="@+id/textView7"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:onClick="onSendMessageButtonClick"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
